--- a/css/style.css
+++ b/css/style.css
@@ -205,9 +205,10 @@ canvas {
 }
 
 .box .controller .functionBox {
-    width: 80px;
+    width: 200px;
     height: 100%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
@@ -216,7 +217,7 @@ canvas {
 .box .controller .functionBox button {
     display: flex;
     height: calc(50% - 10px);
-    width: 100%;
+    width: 80px;
     flex-direction: row;
     justify-content: center;
     align-items: center;
